Faster palette system